--- a/chrome-app/app/manifest.json
+++ b/chrome-app/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Twitch Mini Player",
-  "description": "Floating & Always-On-Top Twitch Player",
+  "description": "Floating & Always-On-Top Twitch Player (Chrome app)",
   "version": "1.0.0",
   "manifest_version": 2,
   "minimum_chrome_version": "39",
@@ -16,7 +16,8 @@
         "js/conf.js",
         "js/background.js"
       ]
-    }
+    },
+    "persistent": false
   },
   "permissions": [
     "storage",
